# hunt-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  benchmarks.sh  build.rs  flake.nix  out.0  todo.wl
.cargo/: config.toml
.github/workflows/: changelog.yml  devskim-analysis.yml  publish.yml
benchmarks/: run
src/: bumpalo_herd.rs  main.rs  print.rs  search.rs  searchresult.rs  structs.rs  threadpool.rs
wix/: main.wxs
