[package]
name = "hunt"
description = "Simple command to quickly search a file/folder by name."
documentation = "https://github.com/LyonSyonII/hunt-rs"
repository = "https://github.com/LyonSyonII/hunt-rs"
keywords = ["algorithms", "filesystem"]
readme = "README.md"
license = "MIT"
version = "2.0.0"
authors = ["Liam G <liam.garriga@tutanota.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.0", features = ["derive", "color"] }
rayon = "1.8.1"
parking_lot = "0.12.1"
mimalloc = { version = "0.1.39", default-features = false }
colored = { version = "2.1.0" }
xxhash-rust = { version = "0.8.8", features = ["xxh3"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = false
panic = "abort"
