[package]
name = "hunt"
description = "Simple command to quickly search a file/folder by name."
documentation = "https://github.com/LyonSyonII/hunt-rs"
repository = "https://github.com/LyonSyonII/hunt-rs"
keywords = ["algorithms", "filesystem"]
readme = "README.md"
license = "MIT"
version = "2.3.0"
authors = ["Liam G <liam.garriga@tutanota.com>"]
edition = "2021"

[package.metadata.wix]
upgrade-guid = "93301563-2D91-4224-B838-C60D235011A0"
path-guid = "35E701F2-8BE5-44F5-A8AB-3864E32599B9"
license = false
eula = false

[dependencies]
clap = { version = "4.5.2", features = ["derive", "color"] }    # Command line argument parser
colored = "2.1.0"                                               # Colored output
rayon = "1.9.0"                                                 # Parallelism library
crossbeam-channel = "0.5.12"                                    # Faster channels (mpmc)
mimalloc = { version = "0.1.39", default-features = false }     # Faster allocator
thin_str = "0.1.0"                                              # Thinner string (only 8 bytes)
memchr = "2.7.1"                                                # Small substring search optimization        
profi = { version = "*", default-features = false, features = ["rayon", "attributes"]}# Multithreaded fine-grained profiler                 

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "0.38.31", default-features = false, features = ["fs", "alloc"] }

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = false
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
strip = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
perf = ["profi/enable"] # Enable performance measurements

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
